--- a/gallery/main.css
+++ b/gallery/main.css
@@ -54,7 +54,7 @@ ul, li {
     margin: 3px;
     border:1px solid #000;
     position: relative;
-    
+    transition: all 0.2s;
 }
 
 .gallery-list li:hover {
